<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iscdasia.smartjlptn5_android.AboutFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_light"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_title"
                android:textColor="@android:color/black"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_light"
            android:gravity="center">

            <TextView
                android:id="@+id/footer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="May be AD"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </RelativeLayout>
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            android:fillViewport="true">
            <LinearLayout
                android:id="@+id/myLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:fillViewport="true">

                <TextView
                    android:id="@+id/bodytext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/smart_jlpt"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_margin="5sp"/>

                <TextView
                    android:id="@+id/bodytext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/bodytext1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <TextView
                    android:id="@+id/bodytext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/bodytext2"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext2_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext1bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext2_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext2_2"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext2_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext2bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext2_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext2_4"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                </TableLayout>

                <com.iscdasia.smartjlptn5_android.HTMLTextView
                    android:id="@+id/bodytext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/bodytext3text"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <com.iscdasia.smartjlptn5_android.HTMLTextView
                    android:id="@+id/bodytext4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/bodytext4"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <TextView
                    android:id="@+id/bodytext5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/bodytext5"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext5_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext1bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext5_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext5_2"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext5_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext2bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext5_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext5_4"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext5_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext3bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext5_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext5_6"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext5_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext4bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <TextView
                            android:id="@+id/bodytext5_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext5_8"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/bodytext6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/bodytext6"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_margin="5sp"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext6_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext1bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <com.iscdasia.smartjlptn5_android.HTMLTextView
                            android:id="@+id/bodytext6_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext6_2"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext6_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext2bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <com.iscdasia.smartjlptn5_android.HTMLTextView
                            android:id="@+id/bodytext6_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext6_4"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext6_5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext3bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <com.iscdasia.smartjlptn5_android.HTMLTextView
                            android:id="@+id/bodytext6_6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext6_6"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/bodytext6_7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext4bracket"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                        <com.iscdasia.smartjlptn5_android.HTMLTextView
                            android:id="@+id/bodytext6_8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:text="@string/bodytext6_8"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:layout_margin="5sp"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>
